--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "target": "ES6",
+    "outDir": "./build/",
+    "module": "commonjs",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "strictNullChecks": true,
