--- a/package.json
+++ b/package.json
@@ -2,29 +2,33 @@
   "name": "fullstack-open-2021-part-9",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "ts-node": "ts-node",
-    "calculateBmi": "ts-node bmiCalculator.ts",
-    "calculateExercises": "ts-node exerciseCalculator.ts",
-    "dev": "ts-node-dev index.ts",
     "start": "node build/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
+    "dev": "ts-node-dev index.ts",
     "lint": "eslint --ext .ts ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Miska23/fullstack-open-2020-part-9.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Miska23/fullstack-open-2020-part-9/issues"
+  },
+  "homepage": "https://github.com/Miska23/fullstack-open-2020-part-9#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^16.11.12",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "^8.4.1",
-    "ts-node": "^10.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "eslint": "^8.6.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.2"
   }
 }
