--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Miska23/fullstack-open-2020-part-9#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
@@ -29,6 +30,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2"
   }
 }
